2008-06-18  Alessandro Scalzo <alessandro@liralab.it>
	* src/yarp/libYARP_dev/include/yarp/dev/DataSource.h : modified
	* src/yarp/libYARP_dev/include/yarp/dev/ServerFrameGrabber.h : modified
	* src/yarp/libYARP_dev/src/ServerFrameGrabber.cpp : modified
	IPreciselyTimed interface added. Implemented in DragonflyDeviceDriver
	in order to provide precise acquisition Stamp.

2008-06-17  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/yarpdev/yarpdev.cpp: Fix failure on autoconf builds.

	* src/libYARP_OS/src/NameServer.cpp: multithread the name-server
	so communication delays with one client do not affect others.
	Of course, operations on the name database remain atomic.

2008-06-14  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/src/ShmemOutputStream.cpp: fix "sizeof" syntax
	problem (exposed on mingw)

	* src/libYARP_OS/src/ShmemInputStream.cpp: fix "sizeof" syntax
	problem (exposed on mingw)

2008-06-06  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/src/BottleImpl.cpp: temporary Bottle-specific
	fix for bug 1982162 ("connection lost between one output and
	two inputs)

2008-06-05  Lorenzo Natale  <nat@liralab.it>
	* src/libYARP_dev/src/RemoteControlBoard.cpp
	* src/libYARP_dev/src/ServerControlBoard.cpp
	* src/libYARP_dev/include/yarp/dev/ControlBoardHelpers.h:
	ServerControlBoard and RemoteControlBoard classes are now
	in separate files. Code is still quite messy, but improving.

	RemoteControlBoard::getEncoders is now non blocking. This prevents
	clients from getting stuck when server dies.
	
2008-05-28  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_dev/src/TestFrameGrabber.cpp: added new [grid]
	mode to see boundaries of image more clearly.

	* example/profiling/port_latency_st.cpp: add single threaded
	version of Lorenzo's port latency test.

2008-05-26  Paul Fitzpatrick  <paulfitz@alum.mit.edu>
	
	* conf/Doxyfile.part: update list of directories searched 
	(math library wasn't included).
