@@ -1,3 +1,8 @@
+2008-06-18  Paul Fitzpatrick  <paulfitz@alum.mit.edu>
+
+	* src/libYARP_OS/src/PortCore.cpp: protect against a potential
+	collision on a packet reference count.
+
 2008-06-18  Alessandro Scalzo <alessandro@liralab.it>
 	* src/yarp/libYARP_dev/include/yarp/dev/DataSource.h : modified
 	* src/yarp/libYARP_dev/include/yarp/dev/ServerFrameGrabber.h : modified
